<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/planetGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/mars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars"
            android:textColor="#BC0B3F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/venus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venus"
            android:textColor="#BC0B3F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/jupiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jupiter"
            android:textColor="#BC0B3F"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/baslik"
        android:textColor="#EF0B0B"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="200dp"
        android:contentDescription="@string/planetpicture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scrollbarSize="4dp"
        android:text="@string/seçimtext"
        android:textColor="#1833DC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputKilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/kilo_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#512DA8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planetGroup"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/sonucKilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4D13DE"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputKilo" />

</androidx.constraintlayout.widget.ConstraintLayout>
